--- a/app/views/userInfo.html
+++ b/app/views/userInfo.html
@@ -1,11 +1,11 @@
 
-        <form class="form-horizontal" role="form" >
+        <form class="form-horizontal" role="form" name="userInfoForm">
             <div class="form-group">
                 <label class="col-md-2 control-label">
                     email:
                 </label>
                 <div class="col-md-10">
-                    <input type="email" class="form-control" placeholder="please use capgemini email" ng-model="userInfo.email">
+                    <input type="email" class="form-control" placeholder="please use capgemini email" ng-model="userInfo.email" required/>
                 </div>
             </div>
             <div class="form-group">
@@ -13,21 +13,22 @@
                     password:
                 </label>
                 <div class="col-md-10">
-                    <input type="passowrd" class="form-control" placeholder="number character underline"  ng-model="userInfo.password">
+                    <input type="passowrd" class="form-control" placeholder="number character underline"  ng-model="userInfo.password" required/>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" ng-model="userInfo.autoLogin"> Remember me
+                            <input type="checkbox" ng-model="userInfo.autoLogin"/> Remember me
                         </label>
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <button class="btn btn-default" ng-click="getFormData()">GetFormData</button>
+                    <input type="submit" ng-click="save()" ng-disabled="userInfoForm.$invalid"/>
+                    <button class="btn btn-default" ng-click="getFormData()" >GetFormData</button>
                     <button class="btn btn-default" ng-click="setFormData()">SetFormData</button>
                     <button class="btn btn-default" ng-click="resetForm()">ResetForm</button>
                 
